--- a/main.css
+++ b/main.css
@@ -5,9 +5,11 @@ body {
 }
 
 .header {
-    background: url('素材/starfield-banner.jpg ');
     position: fixed;
     width: 95%;
+    height: 180px;
+
+    background: url('images/starfield-banner.jpg');
 }
 
 .header .logo-link {
@@ -15,6 +17,115 @@ body {
 }
 
 .header .logo {
+    display: inline-block;
     width:110px;
+    height: 110px;
     margin:11px;
+
+    background: no-repeat center/100px 100px url('images/nasa_logo.png');
+}
+
+.header a {
+    display:inline-block;
+
+    text-decoration: none;
+    color: white;
+}
+
+.topbanner-row1 {
+  display: inline-block;
+  position: absolute;
+  left: 25%;
+}
+.link-topbanner-row1 {
+  padding: 30px 10px;
+
+  font-size: 25px;
+}
+.link-topbanner-row1::before {
+  content: ''; 
+  display: inline-block; 
+  position: relative;
+  left: -10px;
+  bottom: -10px;    
+
+  height: 40px;
+
+  border-right: solid  #BCB7AB 1px;
+}
+
+.link-topbanner-row1:first-child::before {
+  display: none;
+}
+
+
+.topbanner-row2 {
+  display: block;
+  position: absolute;
+  top: 122px;
+  left: 350px;
+
+  background: rgb(112, 105, 105);
+
+}
+.link-topbanner-row2 {
+  padding: 10px 10px;
+
+  font-size: 20px;
+}
+.link-topbanner-row2::before {
+  content: '';  
+  display: inline-block;
+  position: relative;
+  left: -10px;
+  top: 6.25px;
+  
+  height: 25px;
+
+  border-right: solid  #BCB7AB 1px;
+}
+
+.link-topbanner-row2:first-child::before {
+  display: none;
+}
+
+.header form {
+  display: inline-block;
+  position: absolute;
+  left: 80%;
+  top: 40px;
+}
+
+.header input {
+    width: 200px;
+    height: 48px;  
+    border: 0;
+    padding-left: 5px;
+
+    font-size: 20px;
+    background: rgba(112, 108, 108, 0.815);
+}
+
+.header form::after {
+    content: "\e60c";
+    display: inline-block;
+    position: relative;
+    top: 1px;
+
+    font-size: 22px;
+    font-family: "iconfont";
+    color: white;
+}
+
+.header form::before {
+    content: "\e600";
+    display: inline-block;
+    position: relative;
+    left: 200px;
+    top:1px;
+
+
+    font-family: "iconfont";
+    font-size: 22px;
+    color: white;
 }
