--- a/styles/header.css
+++ b/styles/header.css
@@ -4,117 +4,100 @@ body {
   background-color: black;
   width: 95%;
   margin: auto;
-
-  font: 1em sans-serif;
+  font: 1em sans-serif sierif;
 }
-
 
 .header {
   position: fixed;
   z-index: 1;
-
   width: 95%;
   height: 180px;
-
   background: url('/images/starfield-banner.jpg');
 }
 
-
 .header .logo {
   display: inline-block;
-
-  width:110px;
+  width: 110px;
   height: 110px;
-  margin:11px;
-
-  background: no-repeat center/100px 100px url('/images/nasa_logo.png');
+  margin: 11px;
+  background: no-repeat center/100px 100px url('../images/nasa_logo.png');
 }
 
 .header a {
-  display:inline-block;
-
+  display: inline-block;
   text-decoration: none;
   color: white;
 }
 
-.topbanner-row1 {
-display: inline-block;
-position: absolute;
-left: 25%;
+.topbanner-nasa {
+  display: inline-block;
+  position: absolute;
+  left: 200px;
 }
 
-.link-topbanner-row1 {
-padding: 30px 10px;
-
-font-size: 25px;
+.link-topbanner-nasa {
+  padding: 30px 10px;
+  font-size: 25px;
 }
 
-.link-topbanner-row1::before {
-content: ''; 
-display: inline-block; 
-position: relative;
-left: -10px;
-bottom: -10px;    
-
-height: 40px;
-
-border-right: solid  #BCB7AB 1px;
+.link-topbanner-nasa::before {
+  content: '';
+  display: inline-block;
+  position: relative;
+  left: -10px;
+  bottom: -10px;
+  height: 40px;
+  border-right: solid #BCB7AB 1px;
 }
 
-.link-topbanner-row1:first-child::before {
-display: none;
+.link-topbanner-nasa:first-child::before {
+  display: none;
 }
 
-.topbanner-row2 {
-display: block;
-position: absolute;
-top: 122px;
-left: 350px;
-
-background: rgb(112, 105, 105);
+.topbanner-interaction {
+  display: block;
+  position: absolute;
+  top: 122px;
+  left: 200px;
+  background: rgb(112, 105, 105);
 }
 
-.link-topbanner-row2 {
-padding: 10px 10px;
-
-font-size: 20px;
+.link-topbanner-interaction {
+  padding: 10px 10px;
+  font-size: 20px;
 }
 
-.link-topbanner-row2::before {
-content: '';  
-display: inline-block;
-position: relative;
-left: -10px;
-top: 6px;
-
-height: 25px;
-
-border-right: solid  #BCB7AB 1px;
+.link-topbanner-interaction::before {
+  content: '';
+  display: inline-block;
+  position: relative;
+  left: -10px;
+  top: 6px;
+  height: 25px;
+  border-right: solid #BCB7AB 1px;
 }
 
-.link-topbanner-row2:first-child::before {
-border: 0;
+.link-topbanner-interaction:first-child::before {
+  border: 0;
 }
 
-.link-topbanner-row2:hover {
-background: rgb(196, 168, 168);
+.link-topbanner-interaction:hover {
+  background: rgb(196, 168, 168);
 }
 
 .header form {
-display: inline-block;
-position: absolute;
-left: 80%;
-top: 40px;
+  display: inline-block;
+  position: absolute;
+  left: 80%;
+  top: 40px;
 }
 
 .header input {
   width: 200px;
-  height: 48px;  
+  height: 48px;
   padding-left: 5px;
   border: 0;
-  
   font-size: 20px;
-
   background: rgba(112, 108, 108, 0.815);
 }
 
@@ -123,7 +106,6 @@ top: 40px;
   display: inline-block;
   position: relative;
   top: 1px;
-
   font-size: 22px;
   font-family: "iconfont";
   color: white;
@@ -134,9 +116,7 @@ top: 40px;
   display: inline-block;
   position: relative;
   left: 200px;
-  top:1px;
-
-
+  top: 1px;
   font-family: "iconfont";
   font-size: 22px;
   color: white;
